<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lly_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_fifteen"
        android:layout_marginRight="@dimen/dp_fifteen"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_forty" >
			<ImageView 
			    android:id="@+id/iv_dismiss"
			    android:layout_width="30dp"
			    android:layout_height="30dp"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="10dp"
			    android:src="@drawable/dismiss"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/CHOOSE_PAY_TYPE"
                android:textColor="@color/lkl_black"
                android:textSize="@dimen/text_dialog_title" />
        </RelativeLayout>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_fifteen"
            android:layout_marginBottom="@dimen/dp_ten"
            android:text="@string/BANK_CARD"
            android:textColor="@color/lkl_black"
            android:textSize="@dimen/text_dialog_title"/>
		<View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dp_fifteen"
            android:layout_marginRight="@dimen/dp_fifteen"
            android:background="@color/main_div_color" />
        <com.lkl.pay.utils.ui.SwipeListView
            android:id="@+id/lv_payWay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_fifteen"
            android:layout_marginRight="@dimen/dp_fifteen"
            android:listSelector="#00000000"
            android:dividerHeight="1px"
            android:divider="@color/main_div_color"
            android:scrollbars="@null" />
		<View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dp_fifteen"
            android:layout_marginRight="@dimen/dp_fifteen"
            android:background="@color/main_div_color" />
        <RelativeLayout
            android:id="@+id/rly_addCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_forty_four"
            android:layout_marginLeft="@dimen/dp_fifteen"
            android:layout_marginRight="@dimen/dp_fifteen" >

            <TextView
                android:id="@+id/tv_foot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/USE_NEW_BANK_CARD"
                android:textColor="@color/main_color"
                android:textSize="@dimen/text_mid_size" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/to_right" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dp_fifteen"
            android:layout_marginRight="@dimen/dp_fifteen"
            android:background="@color/main_div_color" />

            <Button
                android:id="@+id/btn_commit_pay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_forty"
                android:layout_margin="@dimen/dp_fifteen"
                android:background="@drawable/bg_corner_lkl_blue"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/text_btn_size" />
    </LinearLayout>

</LinearLayout>