<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        layout="@layout/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="你正在安全支付环境中，请填写本人银行卡"
            android:textColor="@color/lkl_black"
            android:textSize="11sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/ry_bnk_to_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_bankown"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="所属银行"
                    android:textColor="@color/lkl_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_bank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@id/tv_bankown"
                    android:background="@null"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left|center_vertical"
                    android:singleLine="true"
                    android:text="招商银行"
                    android:textColor="@color/lkl_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_card_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/tv_bank_name"
                    android:text="储蓄卡"
                    android:textColor="@color/lkl_black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ly_addInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp" >

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/lkl_black"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edt_masterName"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:background="@null"
                            android:gravity="left|center_vertical"
                            android:hint="@string/hint_nm"
                            android:singleLine="true"
                            android:textColor="@color/lkl_black"
                            android:textColorHint="@color/lkl_gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:background="@color/main_bg_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp" >

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="身份证号"
                            android:textColor="@color/lkl_black"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edt_masterID"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:background="@null"
                            android:gravity="left|center_vertical"
                            android:hint="持卡人身份证"
                            android:singleLine="true"
                            android:textColor="@color/lkl_black"
                            android:textColorHint="@color/lkl_gray"
                            android:maxLength="18"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/ly_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/tv_phone_left"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:textColor="@color/lkl_black"
                        android:textSize="14sp" />

                    <ImageView android:id="@+id/iv_explain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="17dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/iv_explain"
                        android:visibility="gone"
                        />
                    <EditText
                        android:id="@+id/edt_masterTel"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/tv_phone_left"
                        android:background="@null"
                        android:gravity="left|center_vertical"
                        android:hint="@string/hint_mobile"
                        android:inputType="number"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:textColor="@color/lkl_black"
                        android:textColorHint="@color/lkl_gray"
                        android:textSize="14sp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ly_Agreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/cb_agree"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:button="@null"
                        android:background="@drawable/bg_check_box_agree"
                        android:checked="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:text="@string/agree"
                        android:textColor="@color/lkl_gray"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tv_protocol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:text="@string/tv_protocol_quick_symbol"
                        android:textColor="@color/lkl_blue"
                        android:textSize="11sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="26dp"
                    android:background="@drawable/bg_corner_lkl_blue"
                    android:text="下一步"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>